# ietfsched

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  SYNC_EVENT_SEQUENCE.md  WORKSPACE  build.gradle  generate_coverage.sh  gradle.properties  run_tests.sh
app/: BUILD.bazel  build.gradle
app/src/androidTest/java/org/ietf/ietfsched/: BaseTest.java  DatabaseUpdateIdlingResource.java  HomeScreenTest.java  ListQueryIdlingResource.java  SessionDetailTest.java  SessionStarringTest.java  SessionsListTest.java  SyncIdlingResource.java  TestUtils.java
app/src/debug/: AndroidManifest.xml
app/src/debug/java/org/ietf/ietfsched/ui/: DebugOAuthActivity.java
app/src/debug/res/layout/: activity_debug_oauth.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/org/dalmasso/ietfsched/provider/: ScheduleDatabase.java  ScheduleProvider.java
app/src/main/java/org/dalmasso/ietfsched/service/: SyncService.java
app/src/main/java/org/dalmasso/ietfsched/ui/: BaseActivity.java  BaseSinglePaneActivity.java  ScheduleFragment.java  SessionDetailFragment.java  SessionsFragment.java  TracksAdapter.java  WellNoteActivity.java  WhatsOnFragment.java
app/src/main/java/org/dalmasso/ietfsched/util/: Maps.java  (+9 more)
app/src/main/res/drawable/: bof_label_bg.xml  join_reload_button_bg.xml  side_label_bg.xml  tab_indicator_green.xml
app/src/main/res/layout/: activity_home.xml  activity_search.xml  activity_singlepane_empty.xml  activity_tracks.xml  blocks_content.xml  fragment_dashboard.xml  fragment_schedule.xml  fragment_session_detail.xml  fragment_sessions_with_search.xml  list_item_session.xml  list_item_session_link.xml  list_item_track.xml  tab_session_content.xml  tab_session_join.xml  tab_session_links.xml  tab_session_notes.xml  tab_session_summary.xml  whats_on_status.xml  whats_on_thank_you.xml
app/src/main/res/layout-land/: activity_home.xml
app/src/main/res/layout-xlarge-land-v11/: activity_home.xml
app/src/main/res/layout-xlarge-v11/: activity_home.xml  activity_schedule.xml  activity_sessions.xml  fragment_session_detail.xml
app/src/main/res/menu/: default_menu_items.xml  session_detail_menu_items.xml
app/src/main/res/menu-xlarge-v11/: default_menu_items.xml
app/src/main/res/values/: attrs.xml  colors.xml  config.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-xlarge-v11/: strings.xml  styles.xml
(+129 files in other folders)
