module(
    name = "ietfsched",
    version = "0.1.0",
)

bazel_dep(name = "rules_android", version = "0.6.4") # Ensure rules_android is version 0.6.4
bazel_dep(name = "rules_jvm_external", version = "5.1") # Keeping the existing version
bazel_dep(name = "platforms", version = "0.0.7") # Keeping the existing version

android_sdk = use_extension("@rules_android//android:extensions.bzl", "android_sdk")
android_sdk.sdk(
    api_level = 34,
    build_tools_version = "34.0.0",
    repository = "https://dl.google.com/android/repository/",
)
use_repo(android_sdk, "android_sdk")